<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#81BECE"
    tools:context=".EditNoteActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="389dp"
        android:layout_height="367dp"
        android:layout_margin="2sp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        android:padding="2sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/editTextNoteEditedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#3000B0FF"
            android:hint="Title"
            android:padding="8sp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editTextNoteEditedDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="Decription"
            android:padding="8sp"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/editTextAddEditedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="Date"
            android:padding="8sp"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/editTextEditedDeadLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="#3000B0FF"
            android:gravity="top"
            android:hint="DeadLine"
            android:padding="8sp"
            android:textAlignment="center"
            tools:ignore="RtlCompat" />


    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_marginTop="4dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <RadioButton
            android:id="@+id/radioButtonEditedLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:background="@drawable/rounded_corner_low_priotity"
            android:text="@string/low_priority"
            android:textColor="#808080"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="395dp" />

        <RadioButton
            android:id="@+id/radioButtonEditedMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:background="@drawable/rounded_corner_medium_priotity"
            android:checked="true"
            android:padding="10sp"
            android:text="@string/mid_priority"
            android:textColor="#808080"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="395dp" />

        <RadioButton
            android:id="@+id/radioButtonEditedHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:background="@drawable/rounded_corner_high_priotity"
            android:padding="10sp"
            android:text="@string/high_priority"
            android:textColor="#808080"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="395dp" />


    </RadioGroup>

    <Button
        android:id="@+id/buttonSaveEditedNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:layout_marginTop="92dp"
        android:text="@string/save_edits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/buttonDeleteNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:layout_marginBottom="176dp"
        android:text="@string/delete_note"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveEditedNote"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>